--- a/app/views/lookbook/partials/_iframe_content_scripts.html.erb
+++ b/app/views/lookbook/partials/_iframe_content_scripts.html.erb
@@ -1,1 +1,1 @@
-<script src="<%= asset_path("/js/iframe.js") %>" defer></script>
+<script src="<%= lookbook_asset_path("/js/iframe.js") %>" defer></script>
