--- a/app/views/lookbook/embeds/show.html.erb
+++ b/app/views/lookbook/embeds/show.html.erb
@@ -1,6 +1,6 @@
 <%= lookbook_render "embed/inspector",
   target: @target,
-  examples: @example_choices,
+  scenarios: @scenario_choices,
   panels: @panels,
   actions: @actions,
   options: @options,
