--- a/app/views/lookbook/previews/group.html.erb
+++ b/app/views/lookbook/previews/group.html.erb
@@ -1,14 +1,14 @@
-<% if examples.many? %>
-  <%# Render a group of examples %>
-  <% examples.each do |example| %>
+<% if scenarios.many? %>
+  <%# Render a group of scenarios %>
+  <% scenarios.each do |scenario| %>
     <div style="margin-bottom: 30px !important; display: block !important;">
       <h6 style="all: unset; display: block; color: #999; font-family: sans-serif; font-size: 14px; margin-top: 0; margin-bottom: 10px;">
-        <%= example.label %>
+        <%= scenario.label %>
       </h6>
-      <%= example.output %>
+      <%= scenario.output %>
     </div>
   <% end %>
 <% else %>
-  <%# Render a single example %>
-  <%= examples.first.output %>
+  <%# Render a single scenario %>
+  <%= scenarios.first.output %>
 <% end %>
