--- a/workbench/app/previews/prose_component_preview/default.html.erb
+++ b/workbench/app/previews/prose_component_preview/default.html.erb
@@ -5,8 +5,8 @@ And this is **some text**.
 It will be rendered in the prose component output.
 
 ```ruby
-def example
-  puts "This is an example"
+def scenario
+  puts "This is an scenario"
 end
 ```
 <% end %>
