refactor(embeds): cleanup and fixes

--- a/app/components/lookbook/embed/component.html.erb
+++ b/app/components/lookbook/embed/component.html.erb
@@ -1,5 +1,5 @@
 <%= render_component_tag id: id,
-  class: "w-full drop-shadow" do %>
+  class: "w-full" do %>
   <div>
     <iframe
       id="<%= id %>-frame"
