--- a/app/views/layouts/lookbook/embed.html.erb
+++ b/app/views/layouts/lookbook/embed.html.erb
@@ -5,7 +5,7 @@
     x-cloak
     @popstate.window="handleNavigation"
     @click.document="hijax"
-    class="rounded-md overflow-hidden">
+    class="overflow-hidden">
     
     <%= render "lookbook/partials/user_styles" %>
 
