--- a/docs/src/_layouts/full.erb
+++ b/docs/src/_layouts/full.erb
@@ -2,6 +2,6 @@
 layout: skeleton
 ---
 
-<main id="full-main" class="layout-full mx-auto px-6 lg:px-8 py-10">
+<main id="full-main" class="overflow-auto">
   <%= yield %>
 </main> 
