--- a/docs/src/_components/lookbook_docs/button/component.html.erb
+++ b/docs/src/_components/lookbook_docs/button/component.html.erb
@@ -8,7 +8,7 @@
   <span class="flex items-center space-x-2">
     <span><%= text || content %></span>
     <% if icon %>
-      <%= render LookbookDocs::Icon::Component.new(name: icon, size: 4) %>
+      <%= render LookbookDocs::Icon::Component.new(name: icon, size: 4, class: "relative -right-0.5") %>
     <% end %>
   </span>
 <% end %>
