--- a/docs/src/_components/lookbook_docs/heading/component.html.erb
+++ b/docs/src/_components/lookbook_docs/heading/component.html.erb
@@ -3,7 +3,7 @@
   id: id,
   class: [
     html_attrs[:class],
-    "relative group mb-6",
+    "relative group mb-6 scroll-mt-6",
     ("h-0 invisible pointer-events-none !m-0" if hidden?),
   ] do %>  
   <span class="flex items-center relative">
