--- a/docs/src/_components/lookbook_docs/toc/component.html.erb
+++ b/docs/src/_components/lookbook_docs/toc/component.html.erb
@@ -5,8 +5,8 @@
     class="pt-3 pb-1 px-3 text-xs uppercase tracking-wide flex items-center cursor-pointer group">
     <span class="font-semibold"><%== title %></span>
     <div class="ml-auto text-gray-600 opacity-50 group-hover:opacity-100 transition hidden">
-      <%= icon :plus_square, size: 3, html: {"x-show": "!open"} %>
-      <%= icon :minus_square, size: 3, html: {"x-show": "open"} %>
+      <%= icon :plus_square, size: 3 %>
+      <%= icon :minus_square, size: 3 %>
     </div>
   </h4>
 
