--- a/docs/src/_pages/index.erb
+++ b/docs/src/_pages/index.erb
@@ -13,7 +13,7 @@ lookbook_embeds: true
         </h1> 
         <div class="max-w-[580px] mx-auto mt-6">
           <p class="text-base sm:text-lg">
-            It combines a powerful <strong class="font-semibold">component preview system</strong> with an integrated 
+            It combines a powerful <strong class="font-semibold">component browser</strong> and <strong>preview system</strong> with an integrated 
             <strong class="font-semibold">documentation engine</strong> to help teams build robust, modular, maintainable user interfaces.
           </p>
         </div>
@@ -59,7 +59,8 @@ lookbook_embeds: true
           </h2>
           <div class="prose">
             <p>The new <strong>preview embeds</strong> feature lets you embed component previews outside of Lookbook with just a few lines of code.</p>
-            <p>Embedded previews have plenty of <a href="<%= guide_url :previews_embeds %>#config">configuration options</a> and are fully responsive. Have a play with the example on the right and see what you think!</p>
+            <p>Embedded previews have plenty of <a href="<%= guide_url :previews_embeds %>#config">configuration options</a>
+            and are fully responsive. Have a play with the example on the right and see what you think!</p>
           </div>
         </div>
       </div>
