--- a/docs/src/_pages/index.erb
+++ b/docs/src/_pages/index.erb
@@ -9,7 +9,7 @@ lookbook_embeds: true
     <div class="layout-slat-grid">
       <div class="col-span-8 col-start-3">
         <h1 class="text-2xl sm:text-4xl font-extralight !leading-[1.4] max-w-[700px] mx-auto"> 
-          Lookbook is a <span class="text-indigo-700">UI component development environment</span> for Ruby on Rails applications.
+          Lookbook is a <span class="text-indigo-700">UI development environment</span> for Ruby on Rails applications.
         </h1> 
         <div class="max-w-[580px] mx-auto mt-6">
           <p class="text-base sm:text-lg">
