--- a/app/components/lookbook/display_options/editor/component.html.erb
+++ b/app/components/lookbook/display_options/editor/component.html.erb
@@ -1,7 +1,7 @@
 <%= render_component_tag class: "px-2" do %>
   <% if fields.many? %>
     <%= lookbook_render :button, icon: :settings, tooltip: "Display options" do |button| %>
-      <% button.dropdown do %>
+      <% button.with_dropdown do %>
         <div class="p-3 space-y-3">
           <%= safe_join(fields) %>
         </div>
