--- a/app/views/lookbook/inspector/panels/_params.html.erb
+++ b/app/views/lookbook/inspector/panels/_params.html.erb
@@ -8,7 +8,7 @@
   <div class="p-4 w-full h-full overflow-x-hidden" id="params-editor-<%= @target.id %>">
     <%= lookbook_render "params/editor" do |editor| %>
       <% @params.each do |param| %>
-        <% editor.field param: param %>
+        <% editor.with_field param: param %>
       <% end %>
     <% end %>
   </div>
