--- a/workbench/app/previews/split_layout_component_preview/three_panes_vertical.html.erb
+++ b/workbench/app/previews/split_layout_component_preview/three_panes_vertical.html.erb
@@ -1,17 +1,17 @@
 <%= render Lookbook::SplitLayout::Component.new(alpine_data: "$store.workbench.verticalSplitLayout", style: "min-height: calc(100vh - 48px);") do |layout| %>
-  <% layout.pane do %>
+  <% layout.with_pane do %>
     <div style="border: 1px solid #ddd; border-right: 0; width: 100%; height: 100%; padding: 20px;">
       Drag dividers to resize panes.
     </div>
   <% end %>
 
-  <% layout.pane do %>
+  <% layout.with_pane do %>
     <div style="border-top: 1px solid #ddd; border-bottom: 1px solid #ddd; width: 100%; height: 100%; padding: 20px;">
       Drag dividers to resize panes.
     </div>
   <% end %>
 
-  <% layout.pane do %>
+  <% layout.with_pane do %>
     <div style="border: 1px solid #ddd; border-left: 0; width: 100%; height: 100%; padding: 20px;">
       Drag dividers to resize panes.
     </div>
